# concat_all_files_in_folder

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml  rust.yml
src/: main.rs
