[package]
name = "concat_all_files_in_folder"
authors = ["simond07 <https://github.com/simond07>"]
version = "0.2.0"
edition = "2021"

[[bin]]
name = "concat_all_files_in_folder"
path = "src/main.rs"

[dependencies]
arboard = "3.4.1"
clap = { version = "4.5.17", features = ["derive"] }
ignore = "0.4"
